--- a/Anki Note Generator From YT Video/pyproject.toml
+++ b/Anki Note Generator From YT Video/pyproject.toml
@@ -8,9 +8,16 @@ dependencies = [
     "genanki>=0.13.1",
     "groq>=0.31.0",
     "yt-dlp>=2025.8.11",
+    "aiohttp>=3.9.5",
+    "pydantic>=2.8.2",
+    "youtube-transcript-api>=0.6.2",
 ]
 
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "pytest-asyncio>=0.23.8",
 ]
+
+[tool.ruff.lint]
+per-file-ignores = { "tests/*.py" = ["I001"] }
