--- a/Anki Note Generator From YT Video/pyproject.toml
+++ b/Anki Note Generator From YT Video/pyproject.toml
@@ -7,10 +7,13 @@ requires-python = ">=3.13"
 dependencies = [
     "genanki>=0.13.1",
     "groq>=0.31.0",
+    "google-genai>=1.30.0",
+    "questionary>=2.1.0",
     "yt-dlp>=2025.8.11",
     "aiohttp>=3.9.5",
     "pydantic>=2.8.2",
     "youtube-transcript-api>=0.6.2",
+    "json5>=0.9.25",
 ]
 
 [dependency-groups]
